--- a/contact.info.html
+++ b/contact.info.html
@@ -21,7 +21,7 @@
     <input type="email" name="yourEmail" value=""><br />
     <label>Your Message:</label>
     <textarea name="yourMessage" rows="10" cols="30"></textarea><br />
-    <input type="submit" name="" value="X">
+    <input type="submit" name="" value="SUBMIT">
   </form>
 </body>
 
