--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td><img src="images/profile-modified.png" alt="Eric" <height="200" width="200"></td>
       <td>
         <br /><br /><br />
-        <h1>Eric Hierholzer</h1>
+        <h1>Eric</h1>
       </td>
     </tr>
     <tr>
