--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <td>⭐⭐⭐</li>
     </tr>
     <tr>
-      <td>Microsoft Office</li>
+      <td>Grit</li>
       <td>⭐⭐⭐⭐⭐</li>
       <td>Critical Thinking</li>
       <td>⭐⭐⭐⭐</li>
