--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>⚛ Eric's Personal Site</title>
+  <title>⭐ Eric's Personal Site ⭐</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <table>
+  <table cellspacing="20">
     <tr>
       <td><img src="images/profile-modified.png" alt="Eric" <height="200" width="200"></td>
       <td>
         <br /><br /><br />
-        <h1>Eric</h1>
+        <h1>Eric Hierholzer</h1>
       </td>
     </tr>
     <tr>
@@ -20,7 +21,7 @@
             <strong>NIWC PAC</strong></a></em></td>
       <td>
         <p>This is my first website that I built while learning HTML with Angela's <br />Udemy course:
-          <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2022 Web Development Bootcamp</a>
+          <a href="https://navwar.udemy.com/course/the-complete-web-development-bootcamp/learn/lecture/12667172?start=0#questions">The Complete 2022 Web Development Bootcamp</a>
         </p>
       </td>
     </tr>
