--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <strong>NIWC PAC</strong></a></em></td>
       <td>
         <p>This is my first website that I built while learning HTML with Angela's <br />Udemy course:
-          <a href="https://navwar.udemy.com/course/the-complete-web-development-bootcamp/learn/lecture/12667172?start=0#questions">The Complete 2022 Web Development Bootcamp</a>
+          <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2022 Web Development Bootcamp</a>
         </p>
       </td>
     </tr>
