--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/profile-modified.png" alt="Eric" <height="200" width="200"></td>
+      <td><img src="images/37412501_10107174613598693_6039540495753936896_n-modified.png" alt="Eric" <height="200" width="200"></td>
       <td>
         <br /><br /><br />
         <h1>Eric Hierholzer</h1>
