--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/37412501_10107174613598693_6039540495753936896_n-modified.png" alt="Eric" <height="200" width="200"></td>
+      <td><img class="circular" src="images/37412501_10107174613598693_6039540495753936896_n-modified.png" alt="Eric"></td>
       <td>
-        <br /><br /><br />
-        <h1>Eric Hierholzer</h1>
+        <br /><br />
+        <h1>Eric Hier</h1>
       </td>
     </tr>
     <tr>
@@ -21,7 +21,7 @@
             <strong>NIWC PAC</strong></a></em></td>
       <td>
         <p>This is my first website that I built while learning HTML with Angela's <br />Udemy course:
-          <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2022 Web Development Bootcamp</a>
+          <a href="https://navwar.udemy.com/course/the-complete-web-development-bootcamp/learn/lecture/12667172?start=0#questions">The Complete 2022 Web Development Bootcamp</a>
         </p>
       </td>
     </tr>
@@ -49,8 +49,8 @@
     </tr>
     <tr>
       <td>Python</li>
-      <td>⭐⭐</li>
-      <td>HTML</li>
+      <td>⭐⭐⭐</li>
+      <td>HTML / CSS</li>
       <td>⭐⭐⭐</li>
     </tr>
     <tr>
@@ -60,7 +60,7 @@
       <td>⭐⭐⭐⭐</li>
     </tr>
     <tr>
-      <td>Survival</li>
+      <td>Survival Skills</li>
       <td>⭐⭐⭐</li>
       <td>Swimming</li>
       <td>⭐⭐⭐</li>
