--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   </head>
   <body>
   <div style="padding-bottom: 50px;" class="top-container">
-  <img class="top-cloud" src="images/cloud.png" alt="cloud">
+  <img class="top-cloud" src="cloud.png" alt="cloud">
     <h1>I'm Eric.</h1>
     <p>a <span class="pro">pro</span>grammer in <span class="pro">pro</span>gress.</p>
-  <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
-  <img class="mountain" src="images/mountain.png" alt="mountain">
+  <img class="bottom-cloud" src="cloud.png" alt="cloud">
+  <img class="mountain" src="mountain.png" alt="mountain">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="/Users/summer/Documents/Personal Development/Web Development/CSS-My Site/Images/37412501_10107174613598693_6039540495753936896_n-modified.png" alt="Eric Profile">
+      <img src="37412501_10107174613598693_6039540495753936896_n-modified.png" alt="Eric Profile">
       <h2></h2>
       <p>My current projects and code can be found in <a href="https://github.com/EricHier1">My Github Repositories</a></p>
     </div>
