--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/erichierholzer">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">TBD</a>
+    <a class="footer-link" href="/hobbies.html">Hobbies</a>
     <a class="footer-link" href="https://erichier1.github.io/">Website</a>
     <p>© Eric Hierholzer 2022</p>
   </div>
